src/objects/ESSR_Six_Sigma_Curriculum_Staging_Table__c.object
<CustomObject>
    <fields>
        <fullName>Active_User__c</fullName>
        <label>Active User</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Status_ID__c</fullName>
        <label>Completion Status ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <label>Completion Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_ID__c</fullName>
        <label>Curriculum ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_Title__c</fullName>
        <label>Curriculum Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <label>Days Remaining</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <label>Item Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Revision_Date__c</fullName>
        <label>Item Revision Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Title__c</fullName>
        <label>Item Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Process Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <label>Required Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Six Sigma Curriculum Staging Table</label>
    <nameField>
        <label>Six Sigma Curriculum Staging Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Six Sigma Curriculum Staging Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>